image to images all

--- a/Project/[Week 3] Final Project/home.html
+++ b/Project/[Week 3] Final Project/home.html
@@ -8,7 +8,7 @@
     <meta name="author" contant="Dafina Salihu">
     <meta name="description" contant="Dafina's Salihu Official page">
     <title>Dafina Salihu</title>
-    <link rel="icon" type="images" href="image/favicon.ico.ico">
+    <link rel="icon" type="images" href="images/favicon.ico.ico">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
                 <hr>
                 <ul>
                     <li> <a href="myprojects.html"> My Projects&#x1F31F;</a> </li>
-                    <li> <a href="contact.html">Contact Me! </a> </li>
+                    <li> <a href="contact.html">Contact Me&#128222; </a> </li>
                 </ul>
                 <hr>
             </nav>
@@ -30,7 +30,7 @@
 
         <article id="html">
             <h2>Who is Dafina Salihu ?</h2>
-            <img src="image/dafina.jpg" alt="Dafina Salihu" width="210" height="250">
+            <img src="images/dafina.jpg" alt="Dafina Salihu" width="210" height="250">
             <figure>
                 <figcaption>Dafina Salihu</figcaption>
             </figure>
