--- a/Project/[Week 3] Final Project/myprojects.html
+++ b/Project/[Week 3] Final Project/myprojects.html
@@ -8,7 +8,7 @@
     <meta name="keyword" contant="Projects">
     <meta name="description" contant="Dafina Salihu Projects">
     <title>Dafina Salihu Projects</title>
-    <link rel="icon" type="images" href="image/favicon.ico.ico">
+    <link rel="icon" type="images" href="images/favicon.ico.ico">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
                 <hr>
                 <ul>
                     <li> <a href="home.html"> Home&#127968</a> </li>
-                    <li> <a href="contact.html">Contact Me! </a> </li>
+                    <li> <a href="contact.html">Contact Me&#128222; </a> </li>
                 </ul>
                 <hr>
             </nav>
@@ -39,7 +39,7 @@
                 <h2> ArchEcm Sh.p.k</h2>
         </article>
         <section>
-            <img src="image/Logoarchecm.png" alt="ArchEcmLogo" width="150" height="150">
+            <img src="images/Logoarchecm.png" alt="ArchEcmLogo" width="150" height="150">
             <figure>
                 <figcaption>ArchEcm Logo</figcaption>
             </figure>
@@ -47,27 +47,27 @@
         <section>
             <h2>Some of ArchEcm Projects</h2>
             <figure>
-                <img src="image/archecm.jpg" alt="Weekend House" width="250" height="200">
+                <img src="images/archecm.jpg" alt="Weekend House" width="250" height="200">
                 <figcaption>Weekend House</figcaption>
             </figure>
 
             <figure>
-                <img src="image/photo1.jpeg" alt="Rendering of the house" width="250" height="200">
+                <img src="images/photo1.jpeg" alt="Rendering of the house" width="250" height="200">
                 <figcaption>Rendering of the house.</figcaption>
             </figure>
 
             <figure>
-                <img src="image/Photo2.jpg" alt="House Project" width="250" height="200">
+                <img src="images/Photo2.jpg" alt="House Project" width="250" height="200">
                 <figcaption>House Project.</figcaption>
             </figure>
 
             <figure>
-                <img src="image/Photo 3.jpg" alt="House Garden" width="250" height="200">
+                <img src="images/Photo 3.jpg" alt="House Garden" width="250" height="200">
                 <figcaption>House Garden. </figcaption>
             </figure>
 
             <figure>
-                <img src="image/Baze.jpg" alt="The basis of the project" width="250" height="200">
+                <img src="images/Baze.jpg" alt="The basis of the project" width="250" height="200">
                 <figcaption>The basis of the projec. </figcaption>
             </figure>
         </section>
@@ -108,22 +108,22 @@
             <section>
                 <h3>Our Menu</h3>
                 <figure>
-                    <img src="image/cheesepizza.jpg" alt="cheesepizza" width="150" height="100">
+                    <img src="images/cheesepizza.jpg" alt="cheesepizza" width="150" height="100">
                     <figcaption>Cheese Pizza</figcaption>
                 </figure>
 
                 <figure>
-                    <img src="image/peperonipizza.jpg" alt="peperonipizza" width="150" height="100">
+                    <img src="images/peperonipizza.jpg" alt="peperonipizza" width="150" height="100">
                     <figcaption>Peperoni Pizza.</figcaption>
                 </figure>
 
                 <figure>
-                    <img src="image/hawaiianpizza.jpg" alt="hawaiianpizza" width="150" height="100">
+                    <img src="images/hawaiianpizza.jpg" alt="hawaiianpizza" width="150" height="100">
                     <figcaption>Hawaiian Pizza.</figcaption>
                 </figure>
 
                 <figure>
-                    <img src="image/vegetarianpizza.jpg" alt="vegetarianpizza" width="150" height="100">
+                    <img src="images/vegetarianpizza.jpg" alt="vegetarianpizza" width="150" height="100">
                     <figcaption>Vegetarian Pizza.</figcaption>
                 </figure>
             </section>
@@ -215,11 +215,11 @@
 
             <section>
                 <hr>
-                <img src="image/dress1.jpg" alt="weedingdress" width="200" height="250">
-                <img src="image/dress2.jpg" alt="elegantdress" width="200" height="250">
-                <img src="image/dress3.jpg" alt="reddress" width="200" height="250">
-                <img src="image/dress4.jpg" alt="weedingdress" width="300" height="250">
-                <img src="image/dress5.jpg" alt="weedingdresses" width="250" height="250">
+                <img src="images/dress1.jpg" alt="weedingdress" width="200" height="250">
+                <img src="images/dress2.jpg" alt="elegantdress" width="200" height="250">
+                <img src="images/dress3.jpg" alt="reddress" width="200" height="250">
+                <img src="images/dress4.jpg" alt="weedingdress" width="300" height="250">
+                <img src="images/dress5.jpg" alt="weedingdresses" width="250" height="250">
                 <figcaption>Some of our store dresses &#x1F457;</figcaption>
             </section>
 
@@ -235,7 +235,7 @@
                 <p>For Online orders we are open 24h!</p>
                 <hr>
                 <p>Follow us on social media:</p>
-                <img src="image/Instagram.jpg" alt="instagramincon" width="30" height="30">
+                <img src="images/Instagram.jpg" alt="instagramincon" width="30" height="30">
             </section>
 
             <section>
