icon to contact me

--- a/Project/[Week 3] Final Project/contact.html
+++ b/Project/[Week 3] Final Project/contact.html
@@ -8,7 +8,7 @@
     <meta name="author" contant="Contact Dafina Salihu">
     <meta name="description" contant="Contact Dafina Salihu ">
     <title>Contact me</title>
-    <link rel="icon" type="images" href="image/favicon.ico.ico">
+    <link rel="icon" type="images" href="images/favicon.ico.ico">
 </head>
 
 <body>
@@ -45,11 +45,11 @@
         <section>
             <h2>Connect with me:</h2>
 
-            <p><a href="https://www.instagram.com/dakkisalihu/" target="_blank"><img src="image/Instagram.jpg"
+            <p><a href="https://www.instagram.com/dakkisalihu/" target="_blank"><img src="images/Instagram.jpg"
                         alt="instagramincon" width="30" height="30"></a>
                 <a href="https://www.linkedin.com/in/dafina-salihu-871874233/" target="_blank"> <img
-                        src="image/linkedIn.png.crdownload" alt="linkedlnlogo" width="30" height="30"> </a>
-                <a href="mailto:dakisalihu@gmail.com"><img src="image/gmaillogo1.png" alt="gmaillogo" width="30"
+                        src="images/linkedin.png" alt="linkedlnlogo" width="30" height="30"> </a>
+                <a href="mailto:dakisalihu@gmail.com"><img src="images/gmaillogo1.png" alt="gmaillogo" width="30"
                         height="30"></a>
             </p>
             <hr>
