--- a/Assigment/[Week 4] 7.A colorful page/acolorfulpage.html
+++ b/Assigment/[Week 4] 7.A colorful page/acolorfulpage.html
@@ -13,7 +13,7 @@
         <h1>Hello Autumn</h1>
         <nav>
             <ul>
-                <li> <a href="home.html"> My Projects&#x1F31F;</a> </li>
+                <li> <a href="home.html"> My Home&#x1F31F;</a> </li>
                 <li> <a href="contact.html">Contact Me&#128222; </a> </li>
             </ul>
         </nav>
