--- a/Assigment/[Week 4] 7.A colorful page/acolorfulpage.html
+++ b/Assigment/[Week 4] 7.A colorful page/acolorfulpage.html
@@ -18,7 +18,8 @@
             </ul>
         </nav>
         <br>
-        <p class="class1"> The season between summer and winter comprising in the northern hemisphere usually the months of September,
+        <p class="class1"> The season between summer and winter comprising in the northern hemisphere usually the months
+            of September,
             October, and November or as reckoned astronomically extending from the September equinox to the December
             solstice. called also fall. 2. : a period of maturity or incipient decline. in the autumn of life.
             By the meteorological calendar, the first day of autumn is always 1 September; ending on 30 November. The
