--- a/Assigment/[Week 2] 2. Video and Audio/favoritecelebrety.html
+++ b/Assigment/[Week 2] 2. Video and Audio/favoritecelebrety.html
@@ -14,10 +14,8 @@
         </header>
         <article>
             <p>Jennifer Lynn Lopez-Affleck, known by her maiden name and also shortened to J.Lo, is an American actress,
-                dancer
-                and singer. In 1991, she began appearing as a Fly Girl dancer on the sketch comedy television series In
-                Living
-                Color,where she remained a regular until she decided to pursue an acting career in 1993</p>
+                dancer and singer. In 1991, she began appearing as a Fly Girl dancer on the sketch comedy television
+                series In Living Color,where she remained a regular until she decided to pursue an acting career in 1993.</p>
 
             <img src="https://images.hellomagazine.com/horizon/square/82076b9c0c80-jennifer-lopez-ponytail-smiling.jpg"
                 alt="Photo of Jennifer Lopez" width="300" height="300">
