--- a/Assigment/[Week 5] 4 Box Properties/boxproperties.html
+++ b/Assigment/[Week 5] 4 Box Properties/boxproperties.html
@@ -10,10 +10,10 @@
 
 <body>
     <article>
-        <p> <span id="img-ny"><img src="images/winternewyork.jpg" alt="Central Park New York" width="300"
-                    height="300"></span>
+        <p> 
             Central Park is an urban park between the Upper West Side and
             Upper East Side neighborhoods of Manhattan in New York City,
+            <span id="img-ny"><img src="images/winternewyork.jpg" alt="Central Park New York"></span>
             United States. It is the fifth-largest park in the city,
             containing 843 acres (341 ha), and the most visited urban
             park in the United States, with an estimated 42 million
