--- a/Assigment/[Week 5] 5.CSS Units/cssunit.html
+++ b/Assigment/[Week 5] 5.CSS Units/cssunit.html
@@ -9,50 +9,59 @@
 </head>
 
 <body>
-    <section class=box-1>
-        <h2>William Shakespear</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque, incidunt nihil mollitia porro reprehenderit
-            necessitatibus ipsam placeat cumque qui fuga consequuntur id.
-            Aliquid possimus rem amet laudantium ipsum voluptatum voluptate!
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi magnam laborum quidem facere assumenda,
-            quos culpa. Voluptatibus hic laboriosam provident
-            in maxime recusandae dolore voluptate accusantium voluptas. Et, saepe unde!</p>
+    <article>
+        <section class=box-1>
+            <h2>William Shakespear</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque, incidunt nihil mollitia porro
+                reprehenderit
+                necessitatibus ipsam placeat cumque qui fuga consequuntur id.
+                Aliquid possimus rem amet laudantium ipsum voluptatum voluptate!
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi magnam laborum quidem facere
+                assumenda,
+                quos culpa. Voluptatibus hic laboriosam provident
+                in maxime recusandae dolore voluptate accusantium voluptas. Et, saepe unde!</p>
             <hr>
-    </section>
+        </section>
 
-    <section class="box-2">
-        <h2>Elliot Smith</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque, incidunt nihil mollitia porro reprehenderit
-            necessitatibus ipsam placeat cumque qui fuga consequuntur id.
-            Aliquid possimus rem amet laudantium ipsum voluptatum voluptate!
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi magnam laborum quidem facere assumenda,
-            quos culpa. Voluptatibus hic laboriosam provident
-            in maxime recusandae dolore voluptate accusantium voluptas. Et, saepe unde!</p>
+        <section class="box-2">
+            <h2>Elliot Smith</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque, incidunt nihil mollitia porro
+                reprehenderit
+                necessitatibus ipsam placeat cumque qui fuga consequuntur id.
+                Aliquid possimus rem amet laudantium ipsum voluptatum voluptate!
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi magnam laborum quidem facere
+                assumenda,
+                quos culpa. Voluptatibus hic laboriosam provident
+                in maxime recusandae dolore voluptate accusantium voluptas. Et, saepe unde!</p>
             <hr>
-    </section>
+        </section>
 
-    <section class="box-3">
-        <h2>Eyodor Dostoevsky</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque, incidunt nihil mollitia porro reprehenderit
-            necessitatibus ipsam placeat cumque qui fuga consequuntur id.
-            Aliquid possimus rem amet laudantium ipsum voluptatum voluptate!
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi magnam laborum quidem facere assumenda,
-            quos culpa. Voluptatibus hic laboriosam provident
-            in maxime recusandae dolore voluptate accusantium voluptas. Et, saepe unde!</p>
+        <section class="box-3">
+            <h2>Eyodor Dostoevsky</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque, incidunt nihil mollitia porro
+                reprehenderit
+                necessitatibus ipsam placeat cumque qui fuga consequuntur id.
+                Aliquid possimus rem amet laudantium ipsum voluptatum voluptate!
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi magnam laborum quidem facere
+                assumenda,
+                quos culpa. Voluptatibus hic laboriosam provident
+                in maxime recusandae dolore voluptate accusantium voluptas. Et, saepe unde!</p>
             <hr>
-    </section>
+        </section>
 
-    <section class="box-4">
-        <h2>Kendrick Lamar</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque, incidunt nihil mollitia porro reprehenderit
-            necessitatibus ipsam placeat cumque qui fuga consequuntur id.
-            Aliquid possimus rem amet laudantium ipsum voluptatum voluptate!
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi magnam laborum quidem facere assumenda,
-            quos culpa. Voluptatibus hic laboriosam provident
-            in maxime recusandae dolore voluptate accusantium voluptas. Et, saepe unde!</p>
+        <section class="box-4">
+            <h2>Kendrick Lamar</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque, incidunt nihil mollitia porro
+                reprehenderit
+                necessitatibus ipsam placeat cumque qui fuga consequuntur id.
+                Aliquid possimus rem amet laudantium ipsum voluptatum voluptate!
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi magnam laborum quidem facere
+                assumenda,
+                quos culpa. Voluptatibus hic laboriosam provident
+                in maxime recusandae dolore voluptate accusantium voluptas. Et, saepe unde!</p>
             <hr>
-    </section>
-
+        </section>
+    </article>
 
 
 
