final project css

--- a/Project/[Week 3] Final Project/contact.html
+++ b/Project/[Week 3] Final Project/contact.html
@@ -9,6 +9,7 @@
     <meta name="description" contant="Contact Dafina Salihu ">
     <title>Contact me</title>
     <link rel="icon" type="images" href="images/favicon.ico.ico">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
