--- a/Project/[Week 3] Final Project/home.html
+++ b/Project/[Week 3] Final Project/home.html
@@ -9,6 +9,7 @@
     <meta name="description" contant="Dafina's Salihu Official page">
     <title>Dafina Salihu</title>
     <link rel="icon" type="images" href="images/favicon.ico.ico">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -31,34 +32,36 @@
         <article id="html">
             <h2>Who is Dafina Salihu ?</h2>
             <img src="images/dafina.jpg" alt="Dafina Salihu" width="210" height="250">
-            <figure>
-                <figcaption>Dafina Salihu</figcaption>
-            </figure>
             <p>Hi there! I'm Dafina,i was born in Gjilan,Kosovo in 1991, i studied for architecture and lately i'm
                 learning for coding,my dream is to work with brands globally to create purpose driven websites that
                 leave a lasting impression.
                 I always want to see out the box and i believe i can achive to make my dreams came true..</p>
         </article>
 
-        <section>
+        <section class="section-1">
             <h2>Education:</h2>
             <ul>
-                <li>Primary school:</li>
-                <ul>
-                    <li><strong>Random school</strong> 1997-2005</li>
-                    <li><strong>English Course</strong> 2003-2006</li>
-                </ul>
+                <div class="list-education1">
+                    <li>Primary school:</li>
+                    <ul>
+                        <li><strong>Random school</strong> 1997-2005</li>
+                        <li><strong>English Course</strong> 2003-2006</li>
+                    </ul>
+                </div>
 
-                <li>High School:</li>
-                <ul>
-                    <li><strong>Technical school of architecture</strong> 2006-2010</li>
-                </ul>
-
-                <li>University:</li>
-                <ul>
-                    <li>Bachelor&#39;s degree in <strong>Architecture</strong> at Aab University 2011-2014</li>
-                </ul>
+                <div class="list-education2">
+                    <li>High School:</li>
+                    <ul>
+                        <li><strong>Technical school of architecture</strong> 2006-2010</li>
+                    </ul>
+                </div>
+                <div class="list-education3">
+                    <li>University:</li>
+                    <ul>
+                        <li>Bachelor&#39;s degree in <strong>Architecture</strong> at Aab University 2011-2014</li>
+                    </ul>
             </ul>
+            </div>
         </section>
 
         <section>
