--- a/Project/[Week 3] Final Project/myprojects.html
+++ b/Project/[Week 3] Final Project/myprojects.html
@@ -9,6 +9,7 @@
     <meta name="description" contant="Dafina Salihu Projects">
     <title>Dafina Salihu Projects</title>
     <link rel="icon" type="images" href="images/favicon.ico.ico">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
