--- a/Project/[Week 3] Final Project/home.html
+++ b/Project/[Week 3] Final Project/home.html
@@ -21,9 +21,11 @@
         <article>
             <nav area-label="primary-navigation">
                 <hr>
-                <ul>
-                    <li> <a href="myprojects.html"> My Projects&#x1F31F;</a> </li>
-                    <li> <a href="contact.html">Contact Me&#128222; </a> </li>
+                <ul class="ul-1">
+                    
+                        <li class="list-1"> <a href="myprojects.html"> My Projects&#x1F31F;</a> </li>
+                        <li class="list-1"> <a href="contact.html">Contact Me&#128222; </a> </li>
+                    
                 </ul>
                 <hr>
             </nav>
