--- a/Project/[Week 3] Final Project/contact.html
+++ b/Project/[Week 3] Final Project/contact.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <h1>Contact Me!</h1>
+        <h1 class="title">Contact Me!</h1>
     </header>
 
     <main>
@@ -22,8 +22,8 @@
             <nav area-label="primary-navigation">
                 <hr>
                 <ul>
-                    <li> <a href="home.html"> Home&#127968</a> </li>
-                    <li> <a href="myprojects.html">My Projects&#x1F31F; </a> </li>
+                    <li class="list-1"> <a href="home.html"> Home&#127968</a> </li>
+                    <li class="list-1"> <a href="myprojects.html">My Projects&#x1F31F; </a> </li>
                 </ul>
                 <hr>
             </nav>
@@ -43,9 +43,8 @@
             </form>
         </section>
 
-        <section>
-            <h2>Connect with me:</h2>
-
+        <section class="contactme">
+            <h2 class="section-header">Connect with me:</h2>
             <p><a href="https://www.instagram.com/dakkisalihu/" target="_blank"><img src="images/Instagram.jpg"
                         alt="instagramincon" width="30" height="30"></a>
                 <a href="https://www.linkedin.com/in/dafina-salihu-871874233/" target="_blank"> <img
@@ -53,7 +52,7 @@
                 <a href="mailto:dakisalihu@gmail.com"><img src="images/gmaillogo1.png" alt="gmaillogo" width="30"
                         height="30"></a>
             </p>
-            <hr>
+
         </section>
     </main>
     <footer>
