--- a/Project/[Week 3] Final Project/myprojects.html
+++ b/Project/[Week 3] Final Project/myprojects.html
@@ -14,23 +14,24 @@
 
 <body>
     <header>
-        <h1>Welcome to my projects</h1>
+        <h1 class="title">Welcome to my projects</h1>
     </header>
     <main>
         <article>
             <nav area-label="primary-navigation">
                 <hr>
                 <ul>
-                    <li> <a href="home.html"> Home&#127968</a> </li>
-                    <li> <a href="contact.html">Contact Me&#128222; </a> </li>
+                    <li class="list-1"> <a href="home.html"> Home&#127968</a> </li>
+                    <li class="list-1"> <a href="contact.html">Contact Me&#128222; </a> </li>
                 </ul>
                 <hr>
             </nav>
         </article>
 
-        <article>
-            <fieldset>
-                <legend><strong>Project 1</strong></legend>
+        <fieldset>
+            <legend><strong>Project 1</strong></legend>
+
+            <article class="project-1">
                 <h2 id="H1">ArchEcm Sh.p.k<a href="home.html#P1">&larr;</a></h2>
                 <ol>
                     <li>Designin</li>
@@ -38,56 +39,57 @@
                     <li>Renovation</li>
                 </ol>
                 <h2> ArchEcm Sh.p.k</h2>
-        </article>
-        <section>
-            <img src="images/Logoarchecm.png" alt="ArchEcmLogo" width="150" height="150">
-            <figure>
-                <figcaption>ArchEcm Logo</figcaption>
-            </figure>
-        </section>
-        <section>
-            <h2>Some of ArchEcm Projects</h2>
-            <figure>
-                <img src="images/archecm.jpg" alt="Weekend House" width="250" height="200">
-                <figcaption>Weekend House</figcaption>
-            </figure>
 
-            <figure>
-                <img src="images/photo1.jpeg" alt="Rendering of the house" width="250" height="200">
-                <figcaption>Rendering of the house.</figcaption>
-            </figure>
+                <section>
+                    <img src="images/Logoarchecm.png" alt="ArchEcmLogo" width="150" height="150">
+                    <figure>
+                        <figcaption>ArchEcm Logo</figcaption>
+                    </figure>
+                </section>
+                <section>
+                    <h2>Some of ArchEcm Projects</h2>
+                    <figure>
+                        <img src="images/archecm.jpg" alt="Weekend House" width="250" height="200">
+                        <figcaption>Weekend House</figcaption>
+                    </figure>
 
-            <figure>
-                <img src="images/Photo2.jpg" alt="House Project" width="250" height="200">
-                <figcaption>House Project.</figcaption>
-            </figure>
+                    <figure>
+                        <img src="images/photo1.jpeg" alt="Rendering of the house" width="250" height="200">
+                        <figcaption>Rendering of the house.</figcaption>
+                    </figure>
 
-            <figure>
-                <img src="images/Photo 3.jpg" alt="House Garden" width="250" height="200">
-                <figcaption>House Garden. </figcaption>
-            </figure>
+                    <figure>
+                        <img src="images/Photo2.jpg" alt="House Project" width="250" height="200">
+                        <figcaption>House Project.</figcaption>
+                    </figure>
 
-            <figure>
-                <img src="images/Baze.jpg" alt="The basis of the project" width="250" height="200">
-                <figcaption>The basis of the projec. </figcaption>
-            </figure>
-        </section>
+                    <figure>
+                        <img src="images/Photo 3.jpg" alt="House Garden" width="250" height="200">
+                        <figcaption>House Garden. </figcaption>
+                    </figure>
 
-        <section>
-            <h3>Our location</h3>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d832.0265940361196!2d21.463722515644783!3d42.45594164592802!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13548da5ee3408b3%3A0x62bd64c1adccec60!2sBesi%20Hair%20salon!5e0!3m2!1sen!2s!4v1695235400286!5m2!1sen!2s"
-                width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-            <address>
-                Rr.Idriz Seferi <br>
-                60000,Gjilan
-                <br>
-                Kosova
-                <br><br>
-                Phone: <a href="tel+38349139139">+38349139139</a>
-            </address>
-        </section>
+                    <figure>
+                        <img src="images/Baze.jpg" alt="The basis of the project" width="250" height="200">
+                        <figcaption>The basis of the projec. </figcaption>
+                    </figure>
+                </section>
+
+                <section>
+                    <h3>Our location</h3>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d832.0265940361196!2d21.463722515644783!3d42.45594164592802!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13548da5ee3408b3%3A0x62bd64c1adccec60!2sBesi%20Hair%20salon!5e0!3m2!1sen!2s!4v1695235400286!5m2!1sen!2s"
+                        width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <address>
+                        Rr.Idriz Seferi <br>
+                        60000,Gjilan
+                        <br>
+                        Kosova
+                        <br><br>
+                        Phone: <a href="tel+38349139139">+38349139139</a>
+                    </address>
+                </section>
+            </article>
         </fieldset>
 
         <br><br><br>
@@ -98,103 +100,104 @@
             <legend><strong>Project 2</strong></legend>
             <h2 id="H2">Pizza House<a href="home.html#P2">&larr; </a></h2>
 
-            <article>
+            <article class="project-2">
                 <h4>About Us</h4>
                 <p>At Pizza House, we believe in giving back to the community that made us and the people who
                     continue to support us. Over the years we&#39; ve provided food and venue space for countless
                     fundraisers and charitable organizations.
                     We also donate over 250 pizzas a year to local schools.</p>
-            </article>
-            <hr>
-            <section>
-                <h3>Our Menu</h3>
-                <figure>
-                    <img src="images/cheesepizza.jpg" alt="cheesepizza" width="150" height="100">
-                    <figcaption>Cheese Pizza</figcaption>
-                </figure>
 
-                <figure>
-                    <img src="images/peperonipizza.jpg" alt="peperonipizza" width="150" height="100">
-                    <figcaption>Peperoni Pizza.</figcaption>
-                </figure>
-
-                <figure>
-                    <img src="images/hawaiianpizza.jpg" alt="hawaiianpizza" width="150" height="100">
-                    <figcaption>Hawaiian Pizza.</figcaption>
-                </figure>
-
-                <figure>
-                    <img src="images/vegetarianpizza.jpg" alt="vegetarianpizza" width="150" height="100">
-                    <figcaption>Vegetarian Pizza.</figcaption>
-                </figure>
-            </section>
-
-            <section>
-                <table border="1">
-                    <tr>
-                        <th>#</th>
-                        <th>Small Pizza</th>
-                        <th>Medium Pizza</th>
-                        <th>Large Pizza</th>
-
-                    </tr>
-
-                    <tr>
-                        <th>Cheese Pizza</th>
-                        <td>$4.00</td>
-                        <td>$5.50</td>
-                        <td>$9.70</td>
-                    </tr>
-
-                    <tr>
-                        <th>Peperoni Pizza</th>
-                        <td>$5.50</td>
-                        <td>$7.50</td>
-                        <td>$11.50</td>
-                    </tr>
-
-                    <tr>
-                        <th>Hawaiian Pizza</th>
-                        <td>$4.50</td>
-                        <td>$6.50</td>
-                        <td>$10.50</td>
-                    </tr>
-
-                    <tr>
-                        <th>Vegetarian Pizza</th>
-                        <td>$5.50</td>
-                        <td>$7.00</td>
-                        <td>$10.00</td>
-                    </tr>
-                </table>
                 <hr>
-            </section>
+                <section>
+                    <h3>Our Menu</h3>
+                    <figure>
+                        <img src="images/cheesepizza.jpg" alt="cheesepizza" width="150" height="100">
+                        <figcaption>Cheese Pizza</figcaption>
+                    </figure>
 
-            <section>
-                <h4>We are open 7 days a week!</h4>
-                <dl>
-                    <dt>Sunday-Thursday </dt>
-                    <dd>09:00-23:00</dd>
-                    <dt>Friday-Saturday </dt>
-                    <dd>09:00-02:00</dd>
-                </dl>
-            </section>
+                    <figure>
+                        <img src="images/peperonipizza.jpg" alt="peperonipizza" width="150" height="100">
+                        <figcaption>Peperoni Pizza.</figcaption>
+                    </figure>
 
-            <section>
-                <h3>Our location</h3>
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2943.2034832147456!2d21.455940076069798!3d42.465960771183205!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13548d1ad23a85f3%3A0xa1e4f99c6e130ba9!2sPizza%20House!5e0!3m2!1sen!2s!4v1695235634646!5m2!1sen!2s"
-                    width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <address>
-                    Rr.Dardania 1 <br>
-                    60000,Gjilan
-                    <br>
-                    Kosova
-                    <br><br>
-                    Phone: <a href="tel+1111111111">+111-111-1111</a>
-                </address>
-            </section>
+                    <figure>
+                        <img src="images/hawaiianpizza.jpg" alt="hawaiianpizza" width="150" height="100">
+                        <figcaption>Hawaiian Pizza.</figcaption>
+                    </figure>
+
+                    <figure>
+                        <img src="images/vegetarianpizza.jpg" alt="vegetarianpizza" width="150" height="100">
+                        <figcaption>Vegetarian Pizza.</figcaption>
+                    </figure>
+                </section>
+
+                <section>
+                    <table border="1">
+                        <tr>
+                            <th>#</th>
+                            <th>Small Pizza</th>
+                            <th>Medium Pizza</th>
+                            <th>Large Pizza</th>
+
+                        </tr>
+
+                        <tr>
+                            <th>Cheese Pizza</th>
+                            <td>$4.00</td>
+                            <td>$5.50</td>
+                            <td>$9.70</td>
+                        </tr>
+
+                        <tr>
+                            <th>Peperoni Pizza</th>
+                            <td>$5.50</td>
+                            <td>$7.50</td>
+                            <td>$11.50</td>
+                        </tr>
+
+                        <tr>
+                            <th>Hawaiian Pizza</th>
+                            <td>$4.50</td>
+                            <td>$6.50</td>
+                            <td>$10.50</td>
+                        </tr>
+
+                        <tr>
+                            <th>Vegetarian Pizza</th>
+                            <td>$5.50</td>
+                            <td>$7.00</td>
+                            <td>$10.00</td>
+                        </tr>
+                    </table>
+                    <hr>
+                </section>
+
+                <section>
+                    <h4>We are open 7 days a week!</h4>
+                    <dl>
+                        <dt>Sunday-Thursday </dt>
+                        <dd>09:00-23:00</dd>
+                        <dt>Friday-Saturday </dt>
+                        <dd>09:00-02:00</dd>
+                    </dl>
+                </section>
+
+                <section>
+                    <h3>Our location</h3>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2943.2034832147456!2d21.455940076069798!3d42.465960771183205!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13548d1ad23a85f3%3A0xa1e4f99c6e130ba9!2sPizza%20House!5e0!3m2!1sen!2s!4v1695235634646!5m2!1sen!2s"
+                        width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <address>
+                        Rr.Dardania 1 <br>
+                        60000,Gjilan
+                        <br>
+                        Kosova
+                        <br><br>
+                        Phone: <a href="tel+1111111111">+111-111-1111</a>
+                    </address>
+                </section>
+            </article>
         </fieldset>
 
         <br><br><br>
@@ -205,57 +208,58 @@
         <fieldset>
             <legend><strong>Project 3</strong></legend>
             <h2 id="H3">Dream shop<a href="home.html#P3">&larr;</a></h2>
-            <article>
+            <article class="project-2">
                 <details>
                     <summary>Dream Shop makes you dreams came true.</summary>
                     <p>Online dress shopping has never been simpler!
                         Shop the latest dress styles and trendy fashion at the best prices. Free shipping over $50.
                     </p>
                 </details>
+
+
+                <section>
+                    <hr>
+                    <img src="images/dress1.jpg" alt="weedingdress" width="200" height="250">
+                    <img src="images/dress2.jpg" alt="elegantdress" width="200" height="250">
+                    <img src="images/dress3.jpg" alt="reddress" width="200" height="250">
+                    <img src="images/dress4.jpg" alt="weedingdress" width="300" height="250">
+                    <img src="images/dress5.jpg" alt="weedingdresses" width="250" height="250">
+                    <figcaption>Some of our store dresses &#x1F457;</figcaption>
+                </section>
+
+                <section>
+                    <h4>Open houres:</h4>
+                    <dl>
+                        <dt>Monday-Friday</dt>
+                        <dd>08:00-22:00</dd>
+                        <dt>Saturday </dt>
+                        <dd>09:00-18:00</dd>
+                    </dl>
+                    <hr>
+                    <p>For Online orders we are open 24h!</p>
+                    <hr>
+                    <p>Follow us on social media:</p>
+                    <img src="images/Instagram.jpg" alt="instagramincon" width="30" height="30">
+                </section>
+
+                <section>
+                    <h3>Our location</h3>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d187946.96744444827!2d20.8284044265747!3d42.60471559320056!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13549fe3c8b03f0d%3A0xc54a63861a63cc8a!2sMINNA%20Fashion!5e0!3m2!1sen!2s!4v1695235735287!5m2!1sen!2s"
+                        width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <address>
+                        Magjistralja Prishtin-Ferizaj
+                        <br>
+                        10000,Prishtina
+                        <br>
+                        Kosova
+                        <br><br>
+                        Phone: <a href="tel+1111111111">+111-111-1111</a>
+                        <br>
+                    </address>
+                </section>
             </article>
-
-            <section>
-                <hr>
-                <img src="images/dress1.jpg" alt="weedingdress" width="200" height="250">
-                <img src="images/dress2.jpg" alt="elegantdress" width="200" height="250">
-                <img src="images/dress3.jpg" alt="reddress" width="200" height="250">
-                <img src="images/dress4.jpg" alt="weedingdress" width="300" height="250">
-                <img src="images/dress5.jpg" alt="weedingdresses" width="250" height="250">
-                <figcaption>Some of our store dresses &#x1F457;</figcaption>
-            </section>
-
-            <section>
-                <h4>Open houres:</h4>
-                <dl>
-                    <dt>Monday-Friday</dt>
-                    <dd>08:00-22:00</dd>
-                    <dt>Saturday </dt>
-                    <dd>09:00-18:00</dd>
-                </dl>
-                <hr>
-                <p>For Online orders we are open 24h!</p>
-                <hr>
-                <p>Follow us on social media:</p>
-                <img src="images/Instagram.jpg" alt="instagramincon" width="30" height="30">
-            </section>
-
-            <section>
-                <h3>Our location</h3>
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d187946.96744444827!2d20.8284044265747!3d42.60471559320056!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13549fe3c8b03f0d%3A0xc54a63861a63cc8a!2sMINNA%20Fashion!5e0!3m2!1sen!2s!4v1695235735287!5m2!1sen!2s"
-                    width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <address>
-                    Magjistralja Prishtin-Ferizaj
-                    <br>
-                    10000,Prishtina
-                    <br>
-                    Kosova
-                    <br><br>
-                    Phone: <a href="tel+1111111111">+111-111-1111</a>
-                    <br>
-                </address>
-            </section>
         </fieldset>
 
     </main>
