--- a/Session/Creating Overlaping Elements/index.html
+++ b/Session/Creating Overlaping Elements/index.html
@@ -29,7 +29,7 @@
     place-content: center;
     margin: 0;
     padding: 10px;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.404);
     border-radius: 10px;
     text-align: center;
     color: white;
@@ -45,8 +45,9 @@
 <body>
     <div class="overlap">
         <div class="overlap-image" style="background-image: url(naturee.jpg);">
-            <h1 class="overlap-description">One with Nature</h1>
+            
         </div>
+        <h1 class="overlap-description">One with Nature</h1>
     </div>
 </body>
 
