--- a/Project/CSS Final Project/dashboard.html
+++ b/Project/CSS Final Project/dashboard.html
@@ -277,7 +277,7 @@
             <section class="managelisting">
                 <div class="managelistcontent">
                     <div class="contentimages">
-                        <img src="images/card-1.jpeg" alt="Montain" width="400" height="300">
+                        <img src="images/card-1.jpeg" alt="Montain" >
 
                         <span class="manageicons">
                             <span class="material-icons">visibility</span>
@@ -301,7 +301,7 @@
 
                 <div class="managelistcontent">
                     <div class="contentimages">
-                        <img src="images/card-2.jpeg" alt="Montain" width="400" height="300">
+                        <img src="images/card-2.jpeg" alt="Montain">
 
                         <span class="manageicons">
                             <span class="material-icons">visibility</span>
@@ -326,7 +326,7 @@
                 </div>
                 <div class="managelistcontent">
                     <div class="contentimages">
-                        <img src="images/card-3.jpeg" alt="Montain" width="400" height="300">
+                        <img src="images/card-3.jpeg" alt="Montain">
 
                         <span class="manageicons">
                             <span class="material-icons">visibility</span>
