--- a/Project/CSS Final Project/dashboard.html
+++ b/Project/CSS Final Project/dashboard.html
@@ -111,12 +111,19 @@
         </div>
     </div>
     <div class="right-content">
-      
+        <div class="table-header">
+            <div class="left-header">
+                
+                <p class="header-dashboard">Dashboard </p>
+            </div>
+            <div>
+                <span class="material-icons ">menu</span>
+            </div>
+        </div>
         <header>
             <div class="left-header">
                 <span class="material-icons more-vert">more_vert</span>
                 <p class="header-dashboard">Dashboard </p>
-
             </div>
             <div class="search-bar-icon">
                 <div class="right-header">
@@ -197,8 +204,9 @@
                     <div class="iframe">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387191.03605587495!2d-74.30932772468381!3d40.69753996568664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2s!4v1699737549850!5m2!1sen!2s"
-                            width="100%"  style="border:0;" allowfullscreen="" loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            style="border:0;" allowfullscreen="" loading="lazy" class="iframee"
+                            referrerpolicy="no-referrer-when-downgrade">
+                        </iframe>
                     </div>
                 </div>
             </section>
@@ -272,12 +280,12 @@
                         <span>Just Updated</span>
                     </div>
                 </div>
-            </section>
+            </section >
             <p class="listchapter">Manage Listing</p>
             <section class="managelisting">
                 <div class="managelistcontent">
                     <div class="contentimages">
-                        <img src="images/card-1.jpeg" alt="Montain" >
+                        <img src="images/card-1.jpeg" alt="Montain">
 
                         <span class="manageicons">
                             <span class="material-icons">visibility</span>
