--- a/Project/CSS Final Project/dashboard.html
+++ b/Project/CSS Final Project/dashboard.html
@@ -288,7 +288,7 @@
                         <img src="images/card-1.jpeg" alt="Montain">
 
                         <span class="manageicons">
-                            <span class="material-icons">visibility</span>
+                            <span class="material-icons view">visibility</span>
                             <span class="material-icons edit">edit</span>
                             <span class="material-icons close">close</span>
                         </span>
@@ -312,7 +312,7 @@
                         <img src="images/card-2.jpeg" alt="Montain">
 
                         <span class="manageicons">
-                            <span class="material-icons">visibility</span>
+                            <span class="material-icons view">visibility</span>
                             <span class="material-icons edit">edit</span>
                             <span class="material-icons close">close</span>
                         </span>
@@ -337,7 +337,7 @@
                         <img src="images/card-3.jpeg" alt="Montain">
 
                         <span class="manageicons">
-                            <span class="material-icons">visibility</span>
+                            <span class="material-icons view">visibility</span>
                             <span class="material-icons edit">edit</span>
                             <span class="material-icons close">close</span>
                         </span>
